fix subtitle alignment

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ button:hover {
 /* subtitle */
 
 .subtitle {
-  margin-top: 1rem;
+  margin-bottom: 1rem;
   text-align: center;
   color: #c78af9;
   font-size: 1.1rem;
